# pyramid

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.md.new  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  swagger.yaml  vim_guide.md
alembic/: env.py
alembic/versions/: dcdd36b81e95_initial_migration.py
app/: __init__.py  database.py  main.py  models.py
app/bot/: bot.py  handlers.py  run_bot.py
app/db/: __init__.py  crud.py  database.py  models.py  schemas.py
nginx/: nginx.conf
tests/: conftest.py  test_api.py  test_models.py
